--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altair 
+astroquery
 bokeh 
 beautifulsoup4 
 catboost 
@@ -46,7 +47,7 @@ Pillow
 line_profiler 
 prometheus-client 
 Pygments 
-pytables
+# pytables
 pytest 
 pytest-benchmark 
 pytz 
